force-app/main/default/objects/agrid__Configuration__c/agrid__Configuration__c.object-meta.xml
<CustomObject>
    <label>Configuration</label>
    <nameField>
        <displayFormat>GRID-{0000}</displayFormat>
        <label>Table No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>