force-app/main/default/objects/agrid__Configuration__c/fields/agrid__Allow_Export__c.field-meta.xml
<CustomField>
    <fullName>agrid__Allow_Export__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To allow user to export records</description>
    <label>Allow Export</label>
    <type>Checkbox</type>
</CustomField>