force-app/main/default/objects/agrid__Configuration__c/fields/agrid__Allow_Partial_Save__c.field-meta.xml
<CustomField>
    <fullName>agrid__Allow_Partial_Save__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To allow saving records partially</description>
    <label>Allow Partial Save</label>
    <type>Checkbox</type>
</CustomField>