force-app/main/default/objects/agrid__Configuration__c/fields/agrid__Allow_Sharing__c.field-meta.xml
<CustomField>
    <fullName>agrid__Allow_Sharing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Sharing</label>
    <type>Checkbox</type>
</CustomField>