force-app/main/default/objects/agrid__Configuration__c/fields/agrid__Allow_user_to_create_bulk_records__c.field-meta.xml
<CustomField>
    <fullName>agrid__Allow_user_to_create_bulk_records__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allow user to create bulk records.</description>
    <label>Allow user to create bulk records</label>
    <type>Checkbox</type>
</CustomField>