force-app/main/default/objects/agrid__Configuration__c/fields/agrid__Allow_user_to_delete_records__c.field-meta.xml
<CustomField>
    <fullName>agrid__Allow_user_to_delete_records__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To allow user to delete records</description>
    <label>Allow user to delete records</label>
    <type>Checkbox</type>
</CustomField>