force-app/main/default/objects/agrid__Configuration__c/fields/agrid__Allow_user_to_edit_records__c.field-meta.xml
<CustomField>
    <fullName>agrid__Allow_user_to_edit_records__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To allow user to edit records</description>
    <label>Allow user to edit records</label>
    <type>Checkbox</type>
</CustomField>