force-app/main/default/objects/agrid__Configuration__c/fields/agrid__Allow_User_To_Override_Filters__c.field-meta.xml
<CustomField>
    <fullName>agrid__Allow_User_To_Override_Filters__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To Allow user to override existing master filter with user filter</description>
    <label>Allow User To Override Filters</label>
    <type>Checkbox</type>
</CustomField>