force-app/main/default/objects/agrid__Configuration__c/fields/agrid__Any_Rule_is_True__c.field-meta.xml
<CustomField>
    <fullName>agrid__Any_Rule_is_True__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Any Rule is True</label>
    <type>Checkbox</type>
</CustomField>