force-app/main/default/objects/agrid__Configuration__c/fields/agrid__Configuration__c.field-meta.xml
<CustomField>
    <fullName>agrid__Configuration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Configuration</label>
    <referenceTo>agrid__Configuration__c</referenceTo>
    <relationshipLabel>Configurations</relationshipLabel>
    <relationshipName>Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>