force-app/main/default/objects/agrid__Configuration__c/fields/agrid__Created_By__c.field-meta.xml
<CustomField>
    <fullName>agrid__Created_By__c</fullName>
    <label>Created By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>