force-app/main/default/objects/agrid__Configuration__c/fields/agrid__Criteria__c.field-meta.xml
<CustomField>
    <fullName>agrid__Criteria__c</fullName>
    <description>To form a logical condition if more than one filters exist.</description>
    <label>Criteria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>