force-app/main/default/objects/agrid__Configuration__c/fields/agrid__Default_Sort_Field__c.field-meta.xml
<CustomField>
    <fullName>agrid__Default_Sort_Field__c</fullName>
    <label>Default Sort Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>