force-app/main/default/objects/agrid__Configuration__c/fields/agrid__Default_Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>agrid__Default_Sort_Order__c</fullName>
    <label>Default Sort Order</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asc</fullName>
                <default>true</default>
                <label>Ascending</label>
            </value>
            <value>
                <fullName>Desc</fullName>
                <label>Descending</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>