force-app/main/default/objects/agrid__Configuration__c/fields/agrid__Default_Sorting__c.field-meta.xml
<CustomField>
    <fullName>agrid__Default_Sorting__c</fullName>
    <label>Default Sorting</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>