force-app/main/default/objects/agrid__Configuration__c/fields/agrid__Default_Sorting_Level__c.field-meta.xml
<CustomField>
    <fullName>agrid__Default_Sorting_Level__c</fullName>
    <label>Default Sorting Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>