force-app/main/default/objects/agrid__Configuration__c/fields/agrid__Enable_Preference__c.field-meta.xml
<CustomField>
    <fullName>agrid__Enable_Preference__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enable Preference</label>
    <type>Checkbox</type>
</CustomField>