force-app/main/default/objects/agrid__Configuration__c/fields/agrid__Field_Size_in_Card_View__c.field-meta.xml
<CustomField>
    <fullName>agrid__Field_Size_in_Card_View__c</fullName>
    <label>Field Size in Card View</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>