force-app/main/default/objects/agrid__Configuration__c/fields/agrid__Focus_Mode__c.field-meta.xml
<CustomField>
    <fullName>agrid__Focus_Mode__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To allow user to view the list view in focus mode</description>
    <label>Focus Mode</label>
    <type>Checkbox</type>
</CustomField>