force-app/main/default/objects/agrid__Configuration__c/fields/agrid__Load_All__c.field-meta.xml
<CustomField>
    <fullName>agrid__Load_All__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Load All</label>
    <type>Checkbox</type>
</CustomField>