force-app/main/default/objects/agrid__Configuration__c/fields/agrid__Name__c.field-meta.xml
<CustomField>
    <fullName>agrid__Name__c</fullName>
    <description>A unique name to identify the grid</description>
    <label>Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>