force-app/main/default/objects/agrid__Configuration__c/fields/agrid__Number_of_Records_per_Page__c.field-meta.xml
<CustomField>
    <fullName>agrid__Number_of_Records_per_Page__c</fullName>
    <description>The number of records which is need to be render default in grid.</description>
    <label>Number of Records per Page</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>20</fullName>
                <default>true</default>
                <label>20</label>
            </value>
            <value>
                <fullName>25</fullName>
            </value>
            <value>
                <fullName>50</fullName>
            </value>
            <value>
                <fullName>100</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>