force-app/main/default/objects/agrid__Configuration__c/fields/agrid__Only_Columns_in_Filter__c.field-meta.xml
<CustomField>
    <fullName>agrid__Only_Columns_in_Filter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Only Columns in Filter</label>
    <type>Checkbox</type>
</CustomField>