force-app/main/default/objects/agrid__Configuration__c/fields/agrid__Override_Default_Sort_Field__c.field-meta.xml
<CustomField>
    <fullName>agrid__Override_Default_Sort_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override Default Sort Field</label>
    <type>Checkbox</type>
</CustomField>