force-app/main/default/objects/agrid__Configuration__c/fields/agrid__Pinned__c.field-meta.xml
<CustomField>
    <fullName>agrid__Pinned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pinned</label>
    <type>Checkbox</type>
</CustomField>