force-app/main/default/objects/agrid__Configuration__c/fields/agrid__Selectable__c.field-meta.xml
<CustomField>
    <fullName>agrid__Selectable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To enable &apos;Select&apos; checkbox for grid.</description>
    <label>Selectable</label>
    <type>Checkbox</type>
</CustomField>