force-app/main/default/objects/agrid__Configuration__c/fields/agrid__Show_Filter_Label_Only__c.field-meta.xml
<CustomField>
    <fullName>agrid__Show_Filter_Label_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Filter Label Only</label>
    <type>Checkbox</type>
</CustomField>