force-app/main/default/objects/agrid__Configuration__c/fields/agrid__SObject__c.field-meta.xml
<CustomField>
    <fullName>agrid__SObject__c</fullName>
    <description>To store SObject API name for the grid.</description>
    <label>SObject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>