force-app/main/default/objects/agrid__Configuration__c/fields/agrid__Title__c.field-meta.xml
<CustomField>
    <fullName>agrid__Title__c</fullName>
    <description>A heading for the grid.</description>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>