force-app/main/default/objects/agrid__Configuration__c/fields/agrid__User__c.field-meta.xml
<CustomField>
    <fullName>agrid__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>