force-app/main/default/objects/agrid__Configuration__c/fields/agrid__Visibility__c.field-meta.xml
<CustomField>
    <fullName>agrid__Visibility__c</fullName>
    <label>Visibility</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Private</fullName>
                <default>true</default>
                <label>Only to me</label>
            </value>
            <value>
                <fullName>Public</fullName>
                <label>All users</label>
            </value>
            <value>
                <fullName>Public Internal</fullName>
                <label>All Internal Users</label>
            </value>
            <value>
                <fullName>Public External</fullName>
                <label>All External Users</label>
            </value>
            <value>
                <fullName>Specific Users</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>