force-app/main/default/objects/agrid__Configuration__c/listViews/agrid__All.listView-meta.xml
<ListView>
    <fullName>agrid__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>